# smsdev-sdk-rs

./: .wakatime-project  Cargo.toml  GitVersion.yml  README.md  _config.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  linter.yml  release.yml  size-label.yml  sonar-cloud.yml
src/: client.rs  error.rs  lib.rs
src/models/: mod.rs  other.rs  send.rs
tests/: integration_tests.rs
