[package]
name = "smsdev"
version = "0.1.0"
authors = ["Guilherme Branco Stracini <guilherme@guilhermebranco.com.br>"]
edition = "2021"
description = "The SMSDev client wrapper."
repository = "https://github.com/guibranco/smsdev-sdk-rs.git"
homepage = "http://guilherme.stracini.com.br/smsdev-sdk-rs"
keywords = ["rest", "client", "smsdev", "sms", "smsdev-api"]
categories = ["network-programming", "web-programming::http-client"]
readme = "README.md"
license = "MIT"


[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
